# RustyDinner

./: Cargo.toml
src/: main.rs
src/domain/src/: error.rs  lib.rs  prelude.rs
src/domain/src/dinner/: mod.rs  reservation.rs
src/domain/src/dinner/abstractions/: mod.rs
src/domain/src/dinner/enums/: dinner_status.rs  mod.rs  reservation_status.rs
src/domain/src/dinner/value_objects/: cuisine.rs  description.rs  ids.rs  location.rs  mod.rs  name.rs
src/domain/src/guest/: guest_rating.rs  mod.rs
src/domain/src/host/: mod.rs
src/domain/src/host/value_objects/: host_id.rs  mod.rs
src/domain/src/shared_kernel/: mod.rs
